jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h


typedef void* INTPTR;

typedef char* PCHAR;

DllImport int ECF_GetComandoEnviado(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetGrandeTotal(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetNumCDC(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumCOOInicial(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumGNF(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumGRG(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetRespostaComando(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetTotalAcrescimos(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalAcrescimosISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalCancelamentos(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalCancelamentosISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalDescontos(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalDescontosISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalIsencao(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalNaoTributado(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalNaoTributadoISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalSubstituicaoTributaria(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalSubstituicaoTributariaISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalTroco(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetVendaBruta(const INTPTR ecfHandle, double* value);